--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.23)
 
-set(HANGMAN_SOURCES "main.c")
+set(HANGMAN_SOURCES "main.c" "curl.c")
 
 add_executable(hangman ${HANGMAN_SOURCES})
 
-target_link_libraries(hangman PUBLIC ncurses)
+target_include_directories(hangman PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+
+target_link_libraries(hangman PUBLIC ncurses curl)
