--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.23)
 
-set(HANGMAN_SOURCES "main.c" "curl.c" "hangman.c")
+set(HANGMAN_SOURCES "main.c" "curl.c" "gen.c")
 
 add_executable(hangman ${HANGMAN_SOURCES})
 
